Fixes a ton of bugs and resolves a ton of things

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -81,7 +81,10 @@ javac.classpath=\
     ${file.reference.worldedit.jar}:\
     ${file.reference.BarAPI.jar}:\
     ${file.reference.craftbukkit-1.7.2-R0.4.jar}:\
-<<<<<<< Updated upstream
+    <<<<<<< Updated upstream:\
+    ${file.reference.craftbukkit-1.7.2-R0.4.jar-2}:\
+    ${file.reference.spigotRSNAPSHOTjar.jar-1}:\
+    ${file.reference.EpicFreedomMod.jar}
     ${file.reference.spigotRSNAPSHOTjar.jar}:\
     ${file.reference.craftbukkit-1.7.2-R0.4.jar-1}:\
     ${file.reference.BukkitTelnet.jar}:\
